updated my bootstrap file

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1> my firstbootstrap page </h1>
         <p>
-            i was very very sick that i spent one whole week away from home to treat my self and recuperate.
+            i was very very sick that i spent one whole week away from home to treat my self.
         </p>
     </div>
     <div class="container mt-5">
@@ -50,11 +50,11 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search">
+              <button class="btn btn-outline-success" type="submit"></button>
             </form>
           </div>
         </div>
-      </nav>ry
+      </nav>
 </body>
 </html>
